WIP: setup Email Developmenti gulp and custom component

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 
     <!-- TODO this might be generated? -->
     <ul>
-      <li><a href="dist/basic.html">basic</a></li>
-      <li><a href="dist/newsletter.html">newsletter</a></li>
-      <li><a href="dist/custom-component.html">custom-component</a></li>
+      <li><a href="dist/amzn-450.html">basic</a></li>
     </ul>
   </body>
 </html>
